--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <head>
 <title>Street Styles</title>
 </head>
-<body>
+<body style="background-color:powderblue;">
+  
+<h1>Street Style -- Life Style</h1>
 
-<p>
-  Street Style -- Life Style
-  </p>
+<p>True story</p>
+
+
 
 </body>
 </html>
