--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-title { text-align: center }
+text-align: center
 <title>Street Styles</title>
 </head>
 <body style="background-color:powderblue;">
