--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <html>
 <head>
 text-align: center
-<title>Street Styles</title>
+<title><text-align: center>Street Styles</title>
 </head>
 <body style="background-color:powderblue;">
   
+ 
 <h1>Street Style -- Life Style</h1>
+<button>True story</button>
 
-<p>True story</p>
-
+  
+  <div style="background-color:black;color:white;padding:20px; texst="center">
+  <h2>London</h2>
+  <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+</div>
 
 
 </body>
