--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <html>
 <head>
-text-align: center
-<title><text-align: center>Street Styles</title>
+   
+  <div style=padding:30px;>
+    <title>Street Styles</title>
+  </div>
 </head>
+  
 <body style="background-color:powderblue;">
   
- 
-<h1>Street Style -- Life Style</h1>
+    
+<div style="background-color:black;color:white;padding:20px;>
+  <h2>DANCE</h2>
+  <p><center>Street Style -- Life Style</center></p>
+</div>
+
+
+                                                                             <h1><center>Street Style -- Life Style</center></h1>
 <button>True story</button>
 
 </body>
