--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 
 <body style="background-color:powderblue;">
-<div style=padding:30px;>
-  <h1><center>Street Style -- Life Style</center></h1>
+<div style=padding:40px;>
+  <h1 style="color:green;"><center>Street Style -- Life Style</center></h1>
 <button>True story</button>
 </div>
 
