--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 
 <body style="background-color:powderblue;">
 <div style=padding:40px;>
-  <h1 style="color:green;"><center>Street Style -- Life Style</center></h1>
+  <h1 style="color:yellow;"><center>Street Style -- Life Style</center></h1>
 <button>True story</button>
+   
+   <p style="color:red;">Nothing</p>
 </div>
 
 </body>
