--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body style="background-color:powderblue;">
 <div style=padding:40px;>
-  <h1 style="color:yellow;"><center>Street Style -- Life Style</center></h1>
+  <h1 style="color:yellow;"><center><em>Street Style -- Life Style</em></center></h1>
 <button>True story</button>
    
    <p style="color:red;">Nothing</p>
