--- a/index.html
+++ b/index.html
@@ -6,10 +6,23 @@
 
 <body style="background-color:powderblue;">
 <div style=padding:40px;>
-  <h1 style="color:yellow;"><center><em>Street Style -- Life Style</em></center></h1>
+  <h1 style="color:yellow;"><center><b><i>Street Style -- Life Style</i></b></center></h1>
 <button>True story</button>
    
-   <p style="color:red;">Nothing</p>
+   <p style="color:red;">
+      Two street dancers performing in the URBANOS dance contest in Brazil.</br>
+A street dance is a dance style that evolved outside dance studios in any available open space such as:</br>
+   <li>streets</li>  
+   <li>dance parties</li>
+   <li>block parties</li>
+   <li>parks</li>
+   <li>school yards</li> 
+   <li>raves</li>
+   <li>and nightclubs</li>   
+The term is used to describe vernacular dances in urban context.</br>
+Vernacular dances are often improvisational and social in nature, encouraging interaction and contact with spectators and other dancers.</br>
+These dances are a part of the vernacular culture of the geographical area that they come from. </br>
+Examples of street dance include b-boying (or breakdancing), which originated in New York City.</p>
 </div>
 
 </body>
