--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <button>True story</button>
    
    <p style="color:red;">
-      Two street dancers performing in the URBANOS dance contest in Brazil.</br>
-A street dance is a dance style that evolved outside dance studios in any available open space such as:</br>
+      A <b>street dance</b> is a dance style that evolved outside dance studios in any available open space such as:</br>
    <li>streets</li>  
    <li>dance parties</li>
    <li>block parties</li>
