--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
    <li>parks</li>
    <li>school yards</li> 
    <li>raves</li>
-   <li>and nightclubs</li>   
+   <li>and nightclubs</li>  </br></br> 
 The term is used to describe vernacular dances in urban context.</br>
 Vernacular dances are often improvisational and social in nature, encouraging interaction and contact with spectators and other dancers.</br>
 These dances are a part of the vernacular culture of the geographical area that they come from. </br>
 Examples of street dance include b-boying (or breakdancing), which originated in New York City.</p>
 </div>
+
+<a href="https://www.google.pl/imgres?imgurl=http%3A%2F%2Fbendxl.com%2Fwp-content%2Fuploads%2F2014%2F03%2FNYCBronx.jpg&imgrefurl=http%3A%2F%2Fbendxl.com%2F2014%2F03%2F11%2Fdo-new-york-artists-take-themselves-too-seriously%2F&docid=SN_QrrSbdaZYTM&tbnid=ZNnNb6CvRKFMuM%3A&vet=10ahUKEwjHs7O0k5XbAhXMw6YKHcHRBGYQMwg4KAIwAg..i&w=425&h=282&bih=974&biw=1920&q=new%20york%20hip%20hop&ved=0ahUKEwjHs7O0k5XbAhXMw6YKHcHRBGYQMwg4KAIwAg&iact=mrc&uact=8
+">New York</a>
+
+
 
 </body>
 </html>
