--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@ These dances are a part of the vernacular culture of the geographical area that 
 Examples of street dance include b-boying (or breakdancing), which originated in New York City.</p>
 </div>
 
-<img src="https://www.google.pl/imgres?imgurl=http%3A%2F%2Fbendxl.com%2Fwp-content%2Fuploads%2F2014%2F03%2FNYCBronx.jpg&imgrefurl=http%3A%2F%2Fbendxl.com%2F2014%2F03%2F11%2Fdo-new-york-artists-take-themselves-too-seriously%2F&docid=SN_QrrSbdaZYTM&tbnid=ZNnNb6CvRKFMuM%3A&vet=10ahUKEwjHs7O0k5XbAhXMw6YKHcHRBGYQMwg4KAIwAg..i&w=425&h=282&bih=974&biw=1920&q=new%20york%20hip%20hop&ved=0ahUKEwjHs7O0k5XbAhXMw6YKHcHRBGYQMwg4KAIwAg&iact=mrc&uact=8
-">
+<img src="NYCBronx.jpg" alt="NEW YORK BABY!">
 
 <a href=https://www.youtube.com/watch?v=PrqDFDEJMmU>Here you can wath the Evloution of Hi-Hop</a>
 <a href="https://www.w3schools.com/" target="_blank">Visit W3Schools!</a>
+
+
+
+
+
 </body>
 </html>
