--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Examples of street dance include b-boying (or breakdancing), which originated in
 
 <img src="NYCBronx.jpg" alt="NEW YORK BABY!">
 
-<a href=https://www.youtube.com/watch?v=PrqDFDEJMmU>Here you can wath the EvOloution of Hi-Hop Culture</a>
+<a href=https://www.youtube.com/watch?v=PrqDFDEJMmU>Here you can wath the EvOloution of Hip-Hop Culture</a>
 <a href="https://www.w3schools.com/" target="_blank">Visit W3Schools!</a>
 
 
