--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ These dances are a part of the vernacular culture of the geographical area that 
 Examples of street dance include b-boying (or breakdancing), which originated in New York City.</p>
 </div>
 
-<img src="NYCBronx.jpg" alt="NEW YORK BABY!">
+<img src="NYCBronx.jpg" alt="NEW YORK BABY!"></br></br>
 
 <a href=https://www.youtube.com/watch?v=PrqDFDEJMmU>Here you can wath the EvOloution of Hip-Hop Culture</a>
 <a href="https://www.w3schools.com/" target="_blank">Visit W3Schools!</a>
