--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@ Vernacular dances are often improvisational and social in nature, encouraging in
 These dances are a part of the vernacular culture of the geographical area that they come from. </br>
 Examples of street dance include b-boying (or breakdancing), which originated in New York City.</p>
 </div>
-
+<div class="container">
+  <!-- Content here -->
+</div>
 <img src="NYCBronx.jpg" alt="NEW YORK BABY!"></br></br>
 
 <a href=https://www.youtube.com/watch?v=PrqDFDEJMmU>Here you can wath the EvOloution of Hip-Hop Culture</a>
