--- a/index.html
+++ b/index.html
@@ -1,40 +1,49 @@
-<html>
-   
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Street Styles</title>
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <title>Street Styles</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </head>
+<body>
 
-<body style="background-color:powderblue;">
-<div style=padding:40px;>
-  <h1 style="color:yellow;"><center><b><i>Street Style -- Life Style</i></b></center></h1>
-<button>True story</button>
+<div class="jumbotron text-center"; style=padding:40px;>
+  <h1 style="color:yellow;"><b><i>Street Style -- Life Style</i></b></h1>
+  <p>We all need to spend more time around nature.</p> 
+</div>
+ 
    
-   <p style="color:red;">
-      A <b>street dance</b> is a dance style that evolved outside dance studios in any available open space such as:</br>
-   <li>streets</li>  
-   <li>dance parties</li>
-   <li>block parties</li>
-   <li>parks</li>
-   <li>school yards</li> 
-   <li>raves</li>
-   <li>and nightclubs</li>  </br></br> 
-The term is used to describe vernacular dances in urban context.</br>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4">
+      <p>A <b>street dance</b> is a dance style that evolved outside dance studios in any available open space such as:</h3></br>
+        <h3>
+         <li>streets</li>  
+         <li>dance parties</li>
+         <li>block parties</li>
+         <li>parks</li>
+         <li>school yards</li> 
+         <li>raves</li>
+           <li>and nightclubs</li> </h3></p>
+   </br></br>
+    </div>
+ 
+   
+   
+
+    <div class="col-sm-4">
+      <h3>X</h3>
+      <p>The term is used to describe vernacular dances in urban context.</br>
 Vernacular dances are often improvisational and social in nature, encouraging interaction and contact with spectators and other dancers.</br>
 These dances are a part of the vernacular culture of the geographical area that they come from. </br>
 Examples of street dance include b-boying (or breakdancing), which originated in New York City.</p>
+    </div>
+  </div>
 </div>
-<div class="container">
-  <!-- Content here -->
-</div>
-<img src="NYCBronx.jpg" alt="NEW YORK BABY!"></br></br>
-
-<a href=https://www.youtube.com/watch?v=PrqDFDEJMmU>Here you can wath the EvOloution of Hip-Hop Culture</a>
-<a href="https://www.w3schools.com/" target="_blank">Visit W3Schools!</a>
-
-
-
-
 
 </body>
 </html>
