--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 <body>
 
 <div class="jumbotron text-center"; style=padding:40px;>
-  <h1 style="color:yellow;"><b><i>Street Style -- Life Style</i></b></h1>
-  <p>We all need to spend more time around nature.</p> 
+  <h1 style="color:#FF7F50"><b>Street Style</b> is a <b>Life Style</b></h1>
+  <h2>
+    <p style="color:#7FFFD4">TO TOUCH    TO MOVE    TO INSPIRE     ..<b>THATS DANCE</b></p>
+   </h2></p>
 </div>
  
    
-<div class="container">
+<div class="container"; style=padding:20px;>
   <div class="row">
     <div class="col-sm-4">
       <p>A <b>street dance</b> is a dance style that evolved outside dance studios in any available open space such as:</h3></br>
@@ -28,19 +30,21 @@
          <li>parks</li>
          <li>school yards</li> 
          <li>raves</li>
-           <li>and nightclubs</li> </h3></p>
-   </br></br>
+         <li>and nightclubs</li> </h3></p>
     </div>
  
-   
-   
 
     <div class="col-sm-4">
-      <h3>X</h3>
       <p>The term is used to describe vernacular dances in urban context.</br>
 Vernacular dances are often improvisational and social in nature, encouraging interaction and contact with spectators and other dancers.</br>
 These dances are a part of the vernacular culture of the geographical area that they come from. </br>
 Examples of street dance include b-boying (or breakdancing), which originated in New York City.</p>
+    </div>
+
+ <div class="col-sm-4">
+      <h3>Column 2</h3>
+      <p>Lorem ipsum dolor..</p>
+      <p>Ut enim ad..</p>
     </div>
   </div>
 </div>
