--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  
+  <style>
+div.a {
+    line-height: 200%;
+}
+  </style>
 </head>
 <body>
 
 <div class="jumbotron text-center"; style=padding:40px;>
   <h1 style="color:#FF7F50"><b>Street Style</b> is a <b>Life Style</b></h1>
   <h2>
-    <p style="color:#7FFFD4">TO TOUCH  <br>    TO MOVE    TO INSPIRE     ..<b>THATS DANCE</b></p>
+    <p style="color:#7FFFD4"; class="a">TO TOUCH   TO MOVE    TO INSPIRE     ..<b>THATS DANCE</b></p>
    </h2></p>
 </div>
  
