--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ div.a {
 </head>
 <body>
 
-<div class="a"; "jumbotron text-center"; style=padding:40px;>
+<div class="a"; style=padding:40px;>
   <h1 style="color:#FF7F50"><b>Street Style</b> is a <b>Life Style</b></h1>
   <h2>
     <p style="color:#7FFFD4">TO TOUCH   TO MOVE    TO INSPIRE     ..<b>THATS DANCE</b></p>
