--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  
+  <style>
+p.a { 
+    word-spacing: 1cm;
+}
+
+</style>
 </head>
   
   
@@ -16,7 +23,7 @@
 <div class="jumbotron text-center"; style=padding:40px;>
   <h1 style="color:#FF7F50"><b>Street Style</b> is a <b>Life Style</b></h1>
   <h2>
-    <p style="color:#7FFFD4">TO TOUCH   TO MOVE    TO INSPIRE     ..<b>THATS DANCE</b></p>
+    <p class="a"; style="color:#7FFFD4">TO TOUCH   TO MOVE    TO INSPIRE     ..<b>THATS DANCE</b></p>
    </h2></p>
 </div>
  
