--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ p.a {
 <div class="jumbotron text-center"; style=padding:40px;>
   <h1 style="color:#FF7F50"><b>Street Style</b> is a <b>Life Style</b></h1>
   <h2>
-    <p class="a">TO TOUCH   TO MOVE    TO INSPIRE     ..<b>THATS DANCE</b></p>
+    <p class="a">TO<" ">TOUCH   TO MOVE    TO INSPIRE     ..<b>THATS DANCE</b></p>
    </h2></p>
 </div>
  
