--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@ p.a {
 <div class="container"; style=padding:20px;>
   <div class="row">
     <div class="col-sm-4">
-      <p>A <b>street dance</b> is a dance style that evolved outside dance studios in any available open space such as:</h3></br>
-        <h3>
+      <p>A <b>street dance</b> is a dance style that evolved outside dance studios in any available open space such as:
+        <h2>
          <li>streets</li>  
          <li>dance parties</li>
          <li>block parties</li>
          <li>parks</li>
          <li>school yards</li> 
          <li>raves</li>
-         <li>and nightclubs</li> </h3></p>
+         <li>and nightclubs</li> </h2></p>
     </div>
  
 
