--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ p.a {
 <div class="jumbotron text-center"; style=padding:40px;>
   <h1 style="color:#FF7F50"><b>Street Style</b> is a <b>Life Style</b></h1>
   <h2>
-    <p class="a"; style="color:#2F4F4F">TO_TOUCH   TO_MOVE    TO_INSPIRE     ..<b>THATS_DANCE</b></p>
+    <p class="a"; style="color:#2F4F4F">TO&nbsp;TOUCH   TO&nbsp;MOVE    TO&nbsp;INSPIRE     ..<b>THATS_DANCE</b></p>
    </h2></p>
 </div>
  
