--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@ p.a {
 }
 
 </style>
+  
+<style>
+body {background-color: powderblue;}
+h3   {color: green;}
+p    {color: red;}
+</style>
 </head>
   
   
