--- a/index.html
+++ b/index.html
@@ -13,14 +13,7 @@
 p.a { 
     word-spacing: 1cm;
 }
-
-</style>
-  
-<style>
-body {background-color: powderblue;}
-h3   {color: green;}
-p    {color: red;}
-</style>
+  </style>
 </head>
   
   
@@ -57,8 +50,8 @@ Examples of street dance include b-boying (or breakdancing), which originated in
     </div>
 
  <div class="col-sm-4">
-      <h3>Column 2</h3>
-      <p>Lorem ipsum dolor..</p>
+      <h3>About</h3>
+      <p>Later i will write something..</p>
       <p>Ut enim ad..</p>
     </div>
   </div>
