--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@ p.a {
   <h2>
     <p class="a"; style="color:#2F4F4F">TO_TOUCH   TO_MOVE    TO_INSPIRE     ..<b>THATS_DANCE</b></p>
    </h2></p>
+  <br>
+    <h2>
+    <p class="a"; style="color:#2F4F4F">DJs   RAPPERs    STYLE     ..<b>DANCE</b></p>
+   </h2></p>
 </div>
  
    
