--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@ Examples of street dance include b-boying (or breakdancing), which originated in
       <p>Ut enim ad..</p>
     </div>
   </div>
+
+<footer>Copyright &copy; Paulina Karczyńska</footer>
+
 </div>
 
 </body>
