--- a/djs.html
+++ b/djs.html
@@ -69,15 +69,15 @@ article {
 <div class="container"; style=padding:20px;>
   <div class="row">
     <div class="col-sm-4">
-      <p>A <b>street dance</b> is a dance style that evolved outside dance studios in any available open space such as:
+      <p><b>DJs:</b>
         <h2>
-         <li>streets</li>  
-         <li>dance parties</li>
-         <li>block parties</li>
-         <li>parks</li>
-         <li>school yards</li> 
-         <li>raves</li>
-         <li>and nightclubs</li> </h2></p>
+         <li>Kool Herc</li>  
+         <li>Flash</li>
+         <li>..</li>
+         <li>...</li>
+         <li>....</li> 
+         <li>.....</li>
+         <li>......</li> </h2></p>
     </div>
  
 
