--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ article {
    </h2></p>
   <br>
     <h2>
-    <p class="a"; style="color:#2F4F4F">DJs   RAPPERs    STYLE     ..<b>DANCE</b></p>
+      <p class="a"; style="color:#2F4F4F"><a href="djs.html">DJs</a>   RAPPERs    STYLE     ..<b>DANCE</b></p>
    </h2></p>
 </div>
  
