--- a/djs.html
+++ b/djs.html
@@ -55,7 +55,7 @@ article {
 <body>
 
 <div class="jumbotron text-center"; style=padding:40px;>
-  <h1 style="color:#FF7F50"><b>Street Style</b> is a <b>Life Style</b></h1>
+  <h1 style="color:#FF7F50"><a href="index.html"><b>Street Style</b> is a <b>Life Style</b></a></h1>
   <h2>
     <p class="a"; style="color:#2F4F4F">TO_TOUCH   TO_MOVE    TO_INSPIRE     ..<b>THATS_DANCE</b></p>
    </h2></p>
