--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@ article {
    </h2></p>
   <br>
     <h2>
-      <p class="a"; style="color:#2F4F4F"><a href="djs.html">DJs</a>   RAPPERs    STYLE     ..<b>DANCE</b></p>
+      <p class="a"; style="color:#2F4F4F">
+        <a href="djs.html">DJs</a>   
+        <a href="rappers.html">RAPPERs</a>
+        <a href="style.html"STYLE</a>  
+        <a href="dance.html"..<b>DANCE</b></a>
+      </p>
    </h2></p>
 </div>
  
