--- a/index.html
+++ b/index.html
@@ -30,20 +30,14 @@ footer {
 }  
 nav {
     float: left;
-    max-width: 160px;
+    max-width: 100px;
     margin: 0;
     padding: 1em;
 }
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-nav ul a {
-    text-decoration: none;
-}
 article {
-    margin-left: 170px;
-    border-left: 1px solid gray;
+    margin-left: 100px;
+    border-left: 4px solid gray;
+    height: 100%;
     padding: 1em;
     overflow: hidden;
 }
