--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ article {
       <p class="a"; style="color:#2F4F4F">
         <a href="djs.html">DJs</a>   
         <a href="rappers.html">RAPPERs</a>
-        <a href="style.html"STYLE</a>  
-        <a href="dance.html"..<b>DANCE</b></a>
+        <a href="style.html">STYLE</a>  
+        <a href="dance.html">..<b>DANCE</b></a>
       </p>
    </h2></p>
 </div>
