--- a/djs.html
+++ b/djs.html
@@ -71,7 +71,8 @@ article {
     <div class="col-sm-4">
       <p><b>DJs:</b>
         <h2>
-         <li>Kool Herc</li>  
+         <li>Kool Herc</li> 
+         <img src="The_Notorious_B.I.G._graffiti.jpg" alt="The BIG Man">
          <li>Flash</li>
          <li>..</li>
          <li>...</li>
