--- a/index.html
+++ b/index.html
@@ -52,16 +52,12 @@ article {
 <div class="jumbotron text-center"; style=padding:40px;>
   <h1 style="color:#FF7F50"><b>Street Style</b> is a <b>Life Style</b></h1>
   <br>
-  <h2>
-    <p class="a"; style="color:#2F4F4F">TO_TOUCH   TO_MOVE    TO_INSPIRE     ..<b>THATS_DANCE</b></p>
-   </h2></p>
-  <br>
     <h2>
       <p class="a"; style="color:#2F4F4F">
-        <a href="djs.html">DJs</a>   
-        <a href="rappers.html">RAPPERs</a>
-        <a href="style.html">STYLE</a>  
-        <a href="dance.html">..<b>DANCE</b></a>
+        <a href="djs.html">TO_TOUCH</a>   
+        <a href="rappers.html">TO_MOVE</a>
+        <a href="style.html">TO_INSPIRE</a>  
+        <a href="dance.html">..<b>THATS_DANCE</b></a>
       </p>
    </h2></p>
 </div>
