--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@ p.a {
 }
   </style>
   
+  
+  <style>
+@font-face {
+font-family: 'Niestandardowy font';
+src: local('Niestandardowy font'), url(ZITGRAFF.ttf) format("truetype")
+}
+  </style>
+  
   <style>
 div.container {
     width: 1700px;
@@ -47,9 +55,10 @@ article {
 </head>
   
   
-<body>
-
-<div class="jumbotron text-center"; style=padding:40px;>
+<body
+  
+  
+<div class="@font-face"; style=padding:40px;>
   <h1 style="color:#FF7F50"><b>Street Style</b> is a <b>Life Style</b></h1>
   <br>
     <h2>
