--- a/index.html
+++ b/index.html
@@ -57,14 +57,17 @@ article {
 <body
 
 <div class="jumbotron text-center"; style=padding:40px;>
-  <h1><b>Street Style</b> is a <b>Life Style</b></h1>
+  <div><h1><b>Street Style</b> is a <b>Life Style</b></h1>
   <br>
         <h2>
+        <p>
         <a href="to_touch.html">TO_TOUCH</a>
         <a href="to_move.html">TO_MOVE</a>
         <a href="to_inspire.html">TO_INSPIRE</a>  
-        <a href="thats_dance.html">..<b>THATS_DANCE</b></a></div>
+        <a href="thats_dance.html">..<b>THATS_DANCE</b></a>
+       </p>
       </h2>
+  </div>
 </div>
  
    
