--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ p.a {
     
 @font-face {
    font-family: fontGraffiti;
-   src: url(sansation_bold.woff);
+   src: url(C:/Users/Paulina/Desktop/REPOSITORY/zitgraff.ttf);
 }
 
 * {
